--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#818cf8"
     tools:context=".MainActivity">
 
     <TextView
@@ -26,6 +27,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="37dp"
         android:layout_marginEnd="30dp"
+        android:textColor="@color/black"
         android:layout_marginBottom="30dp"
         android:background="@drawable/rounded"
         android:hint="Username"
@@ -38,6 +40,7 @@
         android:layout_below="@id/username"
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
+        android:textColor="@color/black"
         android:inputType="textEmailAddress"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
@@ -50,6 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/email"
+        android:textColor="@color/black"
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
         android:inputType="number"
@@ -63,6 +67,7 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:textColor="@color/black"
         android:layout_below="@id/phone"
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
@@ -149,6 +154,7 @@
         android:text="Register" />
 
     <RelativeLayout
+        android:id="@+id/under_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/register_btn"
@@ -180,8 +186,41 @@
 
             />
 
-
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/linkedin"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_below="@id/under_register"
+        android:background="@drawable/instagram"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        />
+
+    <RelativeLayout
+        android:id="@+id/instagram"
+        android:layout_toRightOf="@id/linkedin"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_marginLeft="30dp"
+        android:layout_below="@id/under_register"
+        android:background="@drawable/linkedin"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        />
+
+    <RelativeLayout
+        android:id="@+id/github"
+        android:layout_toLeftOf="@id/linkedin"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_marginRight="30dp"
+        android:layout_below="@id/under_register"
+        android:background="@drawable/github"
+        android:layout_marginTop="40dp"
+        android:layout_centerHorizontal="true"
+        />
 
 
 </RelativeLayout>
